--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,16 +2,9 @@ doctype html
 html
   head
     title= title
-    script(src="//code.jquery.com/jquery-1.10.1.min.js")
 
-    link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css')
-    //link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css')
-    link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css')
-    // Figure out what this does
-    script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js")
-    link(href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.5/paper/bootstrap.min.css", rel="stylesheet")
-    link(rel='stylesheet', href='/stylesheets/hover-min.css', media='all')
-    link(rel='stylesheet', href='/stylesheets/animation.css', media='all')
+    //script(src="//code.jquery.com/jquery-1.10.1.min.js")
+    script(src='/js/jquery-min.js')
 
     script(src='/js/zlib/zlib.js')
     script(src='/js/zlib/zlib-deflate.js')
@@ -21,6 +14,17 @@ html
     script(src='/js/base64.js')
     script(src='/js/shared.js')
 
+
+    link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap-min.css')
+    
+    link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css')
+
+    link(href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.5/paper/bootstrap.min.css", rel="stylesheet")
+    link(href="/stylesheets/bootswatch-min.css", rel="stylesheet")
+
+    link(rel='stylesheet', href='/stylesheets/hover-min.css', media='all')
+    link(rel='stylesheet', href='/stylesheets/animation.css', media='all')
     link(rel='stylesheet', href='/stylesheets/style.css')
     //CSS file for layout elements
     link(rel='stylesheet', href='/stylesheets/custom-layout.css')
