--- a/public/stylesheets/flat-ui.css
+++ b/public/stylesheets/flat-ui.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:400,700,400italic");/*!
+@import url("https://fonts.googleapis.com/css?family=Lato:400,700,400italic");
+@import url("roboto-support.css");/*!
  * bootswatch v3.3.4+1
  * Homepage: http://bootswatch.com
  * Copyright 2012-2015 Thomas Park
