--- a/views/layout.jade
+++ b/views/layout.jade
@@ -29,6 +29,8 @@ html
     //CSS file for layout elements
     link(rel='stylesheet', href='/stylesheets/custom-layout.css')
 
+    link(rel="shortcut icon" href="/images/favicon.ico")
+
     block scripts
 
   body
