--- a/views/index.jade
+++ b/views/index.jade
@@ -237,7 +237,7 @@ block content
                         p AEBUOBONFOAW FJIOW FIQWM FNOPJEOIPFW  FWIOFNIOW W
                     div.case-expandUp
                         div.case-scroll-line
-                        div.case-omlet-screen
+                        div.case-omlet-screen.case-screen-1
             div.col-md-4
                 div.case-row-item
                     a.case-item-video
@@ -246,7 +246,7 @@ block content
                         p Detecting the IoTs nearby using iBeacon etc and connecting them over Omlet
                     div.case-expandUp
                         div.case-scroll-line
-                        div.case-omlet-screen
+                        div.case-omlet-screen.case-screen-2
             div.col-md-4
                 div.case-row-item
                     a.case-item-video
@@ -255,7 +255,7 @@ block content
                         p AEBUOBONFOAW FJIOW FIQWM FNOPJEOIPFW  FWIOFNIOW W
                     div.case-expandUp
                         div.case-scroll-line
-                        div.case-omlet-screen
+                        div.case-omlet-screen.case-screen-3
 
     section(class='white-block team')
         br
