--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,8 @@ html
 
     //script(src="//code.jquery.com/jquery-1.10.1.min.js")
     script(src='/js/jquery-min.js')
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js")
+    script(src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js")
 
     script(src='/js/zlib/zlib.js')
     script(src='/js/zlib/zlib-deflate.js')
@@ -13,6 +15,7 @@ html
     script(src='/js/zlib/zlib-crc32.js')
     script(src='/js/base64.js')
     script(src='/js/shared.js')
+    script(src='/js/smoothscroll.js')
 
 
     link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css')
@@ -52,11 +55,13 @@ html
           li
             img(class="stanford", src="/images/SUSig_Black_Seal_Stacked_Left.png", href="stanford.edu", width='130')
           li
-            a(class="scroller scroller-choice", href="/browse") Browse
+            a(class="scroller scroller-choice smoothScroll", href="#browse") Browse
           li
-            a(class="scroller scroller-choice", href="/create") Create
+            a(class="scroller scroller-choice smoothScroll", href="#platform") Platform
           li
-            a(class="scroller scroller-choice", href="/about") About
+            a(class="scroller scroller-choice smoothScroll", href="#examples") Examples
+          li
+            a(class="scroller scroller-choice smoothScroll", href="#about") About
 
 
     br
