--- a/views/index.jade
+++ b/views/index.jade
@@ -14,22 +14,22 @@ block content
                         button(type="button", class="close", data-dismiss="modal") &times
                     div(class='modal-content-wrap')
                         div(class="modal-body")
-                            h4 <b>Join our mailing list</b>
-                            h5 Hear about the latest news and releases
+                            h4 <b>We Need Your Support</b>
+                            h5(class="modal-body-text") Join our mailing list, and hear about the latest news and releases
                             div(class="form-group")
-                                input(class="form-control", type="text", value="Your email address")
+                                input(class="form-control", type="text", value="Your email address here")
                         div(class='modal-footer iot-modal-footer')
                             div(class='row')
                                 div(class="col-sm-3 col-sm-offset-9")
-                                    button(type="button", class="btn btn-primary iot-developer-modal-subscribe-btn", data-dismiss="modal") Suscribe
+                                    button(type="button", class="btn btn-primary iot-developer-modal-subscribe-btn", data-dismiss="modal") Subscribe
 
     section(class='page-banner block')
         div(class='iot-banner')
             div(class='iot-comic-picture')
                 div(class='iot-content', align='center')
-                    h2(class="iot-content-text iot-content-name") Thingpedia
-                    h4(class="iot-content-text iot-content-ad") Help the world connect the dots
-                    h4(class="iot-content-text iot-content-short") An open platform led by Stanford University for creating IoT rules on personal and medical devices
+                    h2(class="iot-content-text iot-content-name") ThingPedia
+                    h4(class="iot-content-text iot-content-ad") Help the World Connect the Dots
+                    h4(class="iot-content-text iot-content-short") An open source platform for IoT rules that you can execute anywhere you want
                     div(class='iot-btn-tab')
                         a(class='btn btn-primary iot-btn iot-btn-developer col-sm-4 col-sm-offset-1 col-xs-12', data-toggle="modal", data-target="#iot-developer-modal") I'm a developer
                         a(class='btn btn-warning iot-btn iot-btn-subscribe col-sm-4 col-xs-12', data-toggle="modal", data-target="#iot-developer-modal") I want to support
@@ -39,30 +39,30 @@ block content
         div(class='feature-row row')
             div(class='feature-two-text col-sm-5 col-sm-offset-1')
                 h3(class='feature-title') The Next Solution for <a class='feature-title-link' href='http://www.forbes.com/sites/tjmccue/2015/04/22/117-billion-market-for-internet-of-things-in-healthcare-by-2020/' target="_blank">Healthcare IoT</a>
-                p(class='feature-text') Across-the-board architecture for all personal IoTs, from health care for the elderly, people with chronic diseases, as well as people wishing to keep up with their health. 
+                p(class='feature-text') Across-the-board architecture for the inter-operability of all personal IoTs (Internet of Things), from health care for people with chronic diseases, as well as people keeping up with their health. 
                     a Learn More
             div(class='feature-zero-img col-sm-5 col-xs-12')
         div(class='feature-row row')
             div(class='feature-one-img col-sm-5 col-sm-offset-1 col-xs-12')
             div(class='feature-one-text col-sm-5')
-                h3(class='feature-title') The More You Use, The Stronger It Is
-                p(class='feature-text') We provide an crowdsourced platform. Everyone can deploy rules from the existing repositories, as well as create and share their own IoT (Internet of Things) rules. 
+                h3(class='feature-title') Anywhere You Want It to Be
+                p(class='feature-text') We provide a crowdsourced platform. Everyone can deploy rules from the existing repositories, as well as create and share their own creativities. All the rules can be downloaded and run on the cloud, your own server or personal devices. 
                     a Learn More
         div(class='feature-row row')
             div(class='feature-two-text col-sm-5 col-sm-offset-1')
                 h3(class='feature-title') Similar but Better
-                p(class='feature-text') Rules are similar to IFTTT "recipes" and Zapier "zaps", but unlike these proprietary platforms, Rulepedia is opensourced and allows users to keep their own data privacy. 
+                p(class='feature-text') Rules are similar to IFTTT "recipes" and Zapier "zaps", but unlike these proprietary platforms, ThingPedia is opensourced and allows you to keep your own data. 
                     a Learn More
             div(class='feature-two-img col-sm-5 col-xs-12')
 
 
     section(class='subscribe')
-        button(href="#" class="subscribe-button btn btn-default") Subscribe to Thingpedia
+        button(href="#" class="subscribe-button btn btn-default" data-toggle="modal" data-target="#iot-developer-modal") Suscribe to ThingPedia
         div(class='subscribe-line')
 
     section(class='grey-block idea', id='browse')
         div
-            h4(class='idea-title') Based on pre-built channels, these rules can be written within dozens of lines of code...
+            h4(class='idea-title') Based on Pre-built Channels, These Rules Can Be Written within Dozens of Lines of Code...
 
         div(class="panel panel-default idea-row-wrap")
             div(class="panel-body")
@@ -75,11 +75,11 @@ block content
                                   i(class="fa fa-circle-thin fa-stack-2x")
                                   i(class="fa fa-medkit fa-stack-1x")
                                 div(class="idea-text")
-                                    |Remind me to take pills
+                                    |Remind Me to Take Pills
                                     br
                                     | <i>---if---</i>
                                     br
-                                    |physician subscribes
+                                    |Physician Subscribes
 
                     div(class="idea-panel-wrap col-md-4")
                         div(class="panel panel-primary idea-panel hvr-grow-shadow")
@@ -88,11 +88,11 @@ block content
                                   i(class="fa fa-circle-thin fa-stack-2x")
                                   i(class="fa fa-stethoscope fa-stack-1x")
                                 div(class="idea-text")
-                                    |Appoint with hospital
+                                    |Appoint with Hospital
                                     br
                                     | <i>---if---</i>
                                     br
-                                    |two months later
+                                    |Two Months Later
 
                     div(class="idea-panel-wrap col-md-4")
                         div(class="panel panel-primary idea-panel hvr-grow-shadow")
@@ -101,11 +101,11 @@ block content
                                   i(class="fa fa-circle-thin fa-stack-2x")
                                   i(class="fa fa-area-chart fa-stack-1x")
                                 div(class="idea-text")
-                                    |Call doctor
+                                    |Call Doctor
                                     br
                                     | <i>---if---</i>
                                     br
-                                    |Blood pressure over 139/89mm
+                                    |Blood Pressure over 139/89mm
 
 
         div(class='idea-row-divider')
@@ -121,11 +121,11 @@ block content
                                   i(class="fa fa-circle-thin fa-stack-2x")
                                   i(class="fa fa-taxi fa-stack-1x")
                                 div(class="idea-text")
-                                    |Call a texi
+                                    |Call a Taxi
                                     br
                                     | <i>---if---</i>
                                     br
-                                    |there's a storm
+                                    |There's a Storm
 
                     div(class="idea-panel-wrap col-md-4")
                         div(class="panel panel-primary idea-panel hvr-grow-shadow")
@@ -134,11 +134,11 @@ block content
                                   i(class="fa fa-circle-thin fa-stack-2x")
                                   i(class="fa fa-lightbulb-o fa-stack-1x")
                                 div(class="idea-text")
-                                    |Turn on lights
+                                    |Turn on Lights
                                     br
                                     | <i>---if---</i>
                                     br
-                                    |it's at dusk
+                                    |It's at Dusk
 
                     div(class="idea-panel-wrap col-md-4")
                         div(class="panel panel-primary idea-panel hvr-grow-shadow")
@@ -147,11 +147,11 @@ block content
                                   i(class="fa fa-circle-thin fa-stack-2x")
                                   i(class="fa fa-twitter fa-stack-1x")
                                 div(class="idea-text")
-                                    |Send a twit
+                                    |Send a Tweet
                                     br
                                     | <i>---if---</i>
                                     br
-                                    |weather's good
+                                    |Weather's Good
 
                 div(class='idea-row row')
                     div(class="idea-panel-wrap col-md-4")
@@ -161,11 +161,11 @@ block content
                                   i(class="fa fa-circle-thin fa-stack-2x")
                                   i(class="fa fa-credit-card fa-stack-1x")
                                 div(class="idea-text")
-                                    |Send me a text
+                                    |Send Me a Text
                                     br
                                     | <i>---if---</i>
                                     br
-                                    |my card is charged
+                                    |My Card Gets Charged
 
                     div(class="idea-panel-wrap col-md-4")
                         div(class="panel panel-primary idea-panel hvr-grow-shadow")
@@ -174,11 +174,11 @@ block content
                                   i(class="fa fa-circle-thin fa-stack-2x")
                                   i(class="fa fa-line-chart fa-stack-1x")
                                 div(class="idea-text")
-                                    |Send me notification
+                                    |Send Me Notification
                                     br
                                     | <i>---if---</i>
                                     br
-                                    |stock is up
+                                    |Stock is Up
 
                     div(class="idea-panel-wrap col-md-4")
                         div(class="panel panel-primary idea-panel hvr-grow-shadow")
@@ -187,11 +187,11 @@ block content
                                   i(class="fa fa-circle-thin fa-stack-2x")
                                   i(class="fa fa-heartbeat fa-stack-1x")
                                 div(class="idea-text")
-                                    |Share my activity
+                                    |Share My Activity
                                     br
                                     | <i>---if---</i>
                                     br
-                                    |I work out
+                                    |I Work out
 
                 div(class='idea-row row last-row')
                     div(class="idea-panel-wrap col-md-4 col-md-offset-2")
@@ -201,11 +201,11 @@ block content
                                   i(class="fa fa-circle-thin fa-stack-2x")
                                   i(class="fa fa-paw fa-stack-1x")
                                 div(class="idea-text")
-                                    |Call my number
+                                    |Call My Number
                                     br
                                     | <i>---if---</i>
                                     br
-                                    |Fido is lost :(
+                                    |Fido is Lost :(
 
                     div(class="idea-panel-wrap col-md-4")
                         div(class="panel panel-primary idea-panel hvr-grow-shadow")
@@ -214,14 +214,14 @@ block content
                                   i(class="fa fa-circle-thin fa-stack-2x")
                                   i(class="fa fa-question fa-stack-1x")
                                 div(class="idea-text")
-                                    |Create your own
+                                    |Create Your Own
                                     br
                                     | <i>---if---</i>
 
 
     section(class='white-block case', id='platform')
         div
-            h4.case-title Build them up easily using existing platforms
+            h4.case-title Build Them up Easily Using Existing Platforms
         b
         div.case-platform-omlet.case-platform.case-slideLeft
             div.row
@@ -242,7 +242,7 @@ block content
 
     section(class='grey-block examples', id='examples')
         div
-            h4.case-title Check out some of our examples
+            h4.case-title Check Out Some of Our Examples
         div.case-title-line
         div.row.case-row
             div.col-md-4
