--- a/views/layout.jade
+++ b/views/layout.jade
@@ -44,7 +44,7 @@ html
           span.icon-bar
           span.icon-bar
           span.icon-bar
-        a(class="navbar-brand navbar-icon scroller", href="/") Thingpedia
+        a(class="navbar-brand navbar-icon scroller", href="/") ThingPedia
 
 
       //TODO: Set active attribute
